--- a/mint/index.pug
+++ b/mint/index.pug
@@ -76,8 +76,7 @@ html(lang="en")
             .mint-connect
               .mint-connect-items
                 .connect-item
-                  img(src="../assets/mint/case-bg.svg").flying-box-back
-                  img(src="../assets/mint/flying-box.png").flying-box
+                  img(src="../assets/mint/case.png", width=337, height=422).flying-box
                   a.connect-link
                     img(src="../assets/mint/link-arrow.svg")
                     .connect-link-text
@@ -89,8 +88,7 @@ html(lang="en")
                     p.mint-required-info.required-time-info
                   
                 .connect-item
-                  img(src="../assets/mint/case-bg.svg").flying-box-back
-                  img(src="../assets/mint/flying-box.png").flying-box
+                  img(src="../assets/mint/case.png", width=337, height=422).flying-box
                   a.connect-link
                     img(src="../assets/mint/link-arrow.svg")
                     .connect-link-text
@@ -98,7 +96,7 @@ html(lang="en")
                       p.link-hover-text Connect to mint
                   .mint-required.required-activity(style="display: none")
                     p.mint-required-title Requirements to claim
-                    p.mint-required-info 200+ score
+                    p.mint-required-info 150+ score
                     a.mint-required-link(href="https://www.herewallet.app/blog/here-score-29ce3537e225")
                       span Read more
                       img(src="../assets/icons/link-arrow-white.svg")
@@ -108,8 +106,7 @@ html(lang="en")
                     p.mint-required-info.required-time-info
 
                 .connect-item
-                  img(src="../assets/mint/case-bg.svg").flying-box-back
-                  img(src="../assets/mint/flying-box.png").flying-box
+                  img(src="../assets/mint/case.png", width=337, height=422).flying-box
                   a.connect-link
                     img(src="../assets/mint/link-arrow.svg")
                     .connect-link-text
@@ -134,51 +131,51 @@ html(lang="en")
             .nft-item
               .nft-small-images
                 .container
-                  img(src="../assets/mint/nft-usdt.svg").usdt-1
-                  img(src="../assets/mint/nft-usdt.svg").usdt-2
-                  img(src="../assets/mint/nft-usdt.svg").usdt-3
+                  img(src="../assets/mint/nft-usdt.png", width=54, height=54).usdt-1
+                  img(src="../assets/mint/nft-usdt.png", width=54, height=54).usdt-2
+                  img(src="../assets/mint/nft-usdt.png", width=54, height=54).usdt-3
               .nft-open-case
-                img(src="../assets/mint/nft-light.svg").nft-item-light
-                img(src="../assets/mint/nft-case.svg").nft-item-case
+                img(src="../assets/mint/nft-light.png", width=195, height=236).nft-item-light
+                img(src="../assets/mint/nft-case.png", width=230, height=193).nft-item-case
               .nft-item-text
                 p.title 1000 USDT
-                p.subtitle (0.5 - 100 USDT, inside 1000 USDT)
+                p.subtitle 500 boxes (1 - 100 USDT)
             .nft-item
               .nft-small-images
                 .container
-                  img(src="../assets/mint/nft-1.svg").nft-1
-                  img(src="../assets/mint/nft-2.svg").nft-2
-                  img(src="../assets/mint/nft-3.svg").nft-3
-                  img(src="../assets/mint/nft-4.svg").nft-4
-                  img(src="../assets/mint/nft-5.svg").nft-5
+                  img(src="../assets/mint/nft-1.png", width=60, height=60).nft-1
+                  img(src="../assets/mint/nft-2.png", width=60, height=60).nft-2
+                  img(src="../assets/mint/nft-3.png", width=60, height=60).nft-3
+                  img(src="../assets/mint/nft-4.png", width=60, height=60).nft-4
+                  img(src="../assets/mint/nft-5.png", width=60, height=60).nft-5
               .nft-open-case
-                img(src="../assets/mint/nft-light.svg").nft-item-light
-                img(src="../assets/mint/nft-case.svg").nft-item-case
+                img(src="../assets/mint/nft-light.png", width=195, height=236).nft-item-light
+                img(src="../assets/mint/nft-case.png", width=230, height=193).nft-item-case
               .nft-item-text
-                p.title 5 HERE NFT
-                p.subtitle (floor: ~30 NEAR, inside 5 NFTs)
+                p.title 10 HERE NFT
+                p.subtitle 10 boxes (floor: ~30 NEAR)
             .nft-item
               .nft-small-images
                 .container
-                  img(src="../assets/mint/150-1.svg").score-1
-                  img(src="../assets/mint/150-2.svg").score-2
-                  img(src="../assets/mint/150-3.svg").score-3
+                  img(src="../assets/mint/150-1.png", width=76, height=50).score-1
+                  img(src="../assets/mint/150-2.png", width=76, height=50).score-2
+                  img(src="../assets/mint/150-2.png", width=76, height=50).score-3
               .nft-open-case
-                img(src="../assets/mint/nft-light.svg").nft-item-light
-                img(src="../assets/mint/nft-case.svg").nft-item-case
+                img(src="../assets/mint/nft-light.png", width=195, height=236).nft-item-light
+                img(src="../assets/mint/nft-case.png", width=230, height=193).nft-item-case
               .nft-item-text
                 p.title +150 SCORE
-                p.subtitle (inside 2000 SCORE)
+                p.subtitle 5000 boxes
             .nft-item
               .nft-small-images
                   .container
-                    img(src="../assets/mint/mutation.svg").mutation
+                    img(src="../assets/mint/mutation.png", width=117, height=117).mutation
               .nft-open-case
-                img(src="../assets/mint/nft-light.svg").nft-item-light
-                img(src="../assets/mint/nft-case.svg").nft-item-case
+                img(src="../assets/mint/nft-light.png", width=195, height=236).nft-item-light
+                img(src="../assets/mint/nft-case.png", width=230, height=193).nft-item-case
               .nft-item-text
                 p.title 1 Mutation
-                p.subtitle (Price: 99 NEAR, inside 1 Mutation)
+                p.subtitle 1 box (Price: 99 NEAR)
         
         div(style="background: #fff")
           section.mint-timeline
@@ -186,17 +183,17 @@ html(lang="en")
             .timeline-items
               .timeline-item.active
                 .timeline-item-image.background-connect-qrcode
-                .timeline-item-dates Aug, 21 - Aug, 24
+                .timeline-item-dates Aug, 25 - Aug, 26
                 .timeline-item-title Waiting list
                 .timeline-item-text Scan QR to set reminder
               .timeline-item
                 .timeline-item-image
-                  img(src="../assets/mint/timeline-chest.svg")
-                .timeline-item-dates Aug, 25 - Aug, 26
+                  img(src="../assets/mint/timeline-chest.png", width=140, height=140)
+                .timeline-item-dates Aug, 26 - Aug, 27
                 .timeline-item-title Mint STARBOX NFT
               .timeline-item
                 .timeline-item-image
-                  img(src="../assets/mint/timeline-app.svg")
+                  img(src="../assets/mint/timeline-app.png", width=140, height=140)
                 .timeline-item-dates Aug, 27 - Aug, 30
                 .timeline-item-title 
                   | Burn minted NFT
