--- a/mint/index.sass
+++ b/mint/index.sass
@@ -324,9 +324,7 @@
 .flying-box
   position: absolute
   animation: flying-box 4s linear infinite
-.flying-box-back
-  position: absolute
-  animation: flying-box 4s linear infinite
+  opacity: 0.4
 
 .mint-nft-background
   display: none
