--- a/mint/footer/index.sass
+++ b/mint/footer/index.sass
@@ -4,12 +4,15 @@
     align-items: center
     justify-content: center
     padding: 112px 0 82px
-
+    @media (max-width: 400px)
+        padding: 60px 0 40px
 
     &-logo
         width: 320px
         height: 73px
-
+        @media (max-width: 400px)
+            width: 200px
+            height: 40px
 
     &-mail
         font-weight: 500
