--- a/mint/index.pug
+++ b/mint/index.pug
@@ -43,9 +43,9 @@ html(lang="en")
         .mint-interlude-wrap
           .mint-line
             h1.mint-title
-              | <em>STARBOX</em> FREE MINT 
+              | STARBOX FREE MINT 
             p.mint-text
-              | Pick up your starbox NFT, 3500 of them holds the prizes. Mint is free via HERE Wallet
+              | Pick up your starbox NFT, 5500+ of them holds the prizes. Mint is free via HERE Wallet
 
           section.mint-interlude
             .mint-status
