--- a/mint/index.sass
+++ b/mint/index.sass
@@ -66,7 +66,7 @@
 
 .mint-title
   color: #2C3034
-  padding-top: 25px
+  padding: 25px 16px 0
   text-shadow: 0px 0px 16px rgba(253, 161, 93, 0.10)
   font-size: 72px
   font-style: normal
@@ -75,6 +75,8 @@
   letter-spacing: 1.44px
   text-transform: uppercase
   margin-bottom: 0
+  text-align: center
+  
   em
     color: #FD84E3
     font-feature-settings: 'liga' off
@@ -83,16 +85,6 @@
     letter-spacing: 1.12px
   @media (max-width: 1000px)
     font-size: 50px 
-  @media (max-width: 700px)
-    font-size: 40px
-    line-height: 40px
-    padding: 15px 30px 0 30px
-  @media (max-width: 500px)
-    font-size: 32px
-    line-height: 24px
-    padding: 22px 30px 0 30px
-  @media (max-width: 400px)
-    font-size: 24px
   
 .mint-text
   font-size: 18px
@@ -228,6 +220,8 @@
 
 .mint-buttons
   padding-top: 64px
+  padding-left: 10px
+  padding-right: 10px
   display: flex
   flex-direction: row
   gap: 20px
@@ -236,7 +230,9 @@
   z-index: 100
   @media (max-width: 700px)
     flex-direction: column
-    padding-top: 200px
+    padding-top: 180px
+  @media (max-width: 560px)
+    padding-top: 220px
 
 .mint-button-connect
   cursor: pointer
@@ -331,7 +327,9 @@
   img
     width: 48px
     height: 48px
-
+    @media (max-width: 480px)
+      width: 32px
+      height: 32px
 .connect-item
   position: relative
   height: 324px
@@ -341,7 +339,7 @@
   align-items: center
   @media (max-width: 480px)
     width: 280px
-    img
+    > img
       width: 280px
       object-fit: contain
 
@@ -572,9 +570,9 @@
     line-height: normal
     letter-spacing: 1.12px
   .timeline-items
-    padding-top: 80px
+    padding: 80px 24px 0
     display: flex
-    justify-content: space-between
+    justify-content: center
     flex-wrap: wrap
     gap: 16px
     max-width: 100%
@@ -584,9 +582,8 @@
       padding: 0 24px 40px
 
 .timeline-item
-  width: 258.5px
+  width: 220px
   opacity: .4
-  flex: 1
   border-radius: 40px
   border: 1px solid #C7BAB8
   background-color: #EBDEDC
@@ -630,7 +627,6 @@
       padding-left: 24px
   &.active
     opacity: 1
-    width: 435px
     background-color: #EBDEDC
     border-color: #2C3034
     @media (max-width: 700px)
