--- a/nft/index.pug
+++ b/nft/index.pug
@@ -23,7 +23,7 @@ html(lang="en")
 			.main-nft-left
 				h1 Here NFT launched
 				p Get NFT to earn +1% APY in HERE Wallet
-				a(href='https://www.tradeport.xyz/near/collection/nft.herewallet.near?tab=marketview').btn.btn_download.btn_maxheight Explore NFTs
+				a(href='https://www.tradeport.xyz/near/collection/nft.herewallet.near?tab=items').btn.btn_download.btn_maxheight Explore NFTs
 			.main-nft-right
 				img(src='images/1-4-14.png' alt='NFT').img-launched
 				.img-launched_mobile
