--- a/nft/index.pug
+++ b/nft/index.pug
@@ -5,12 +5,12 @@ html(lang="en")
 		meta(http-equiv="X-UA-Compatible", content="IE=edge")
 		meta(name="viewport", content="width=device-width, initial-scale=1.0")
 		title HERE NFT Collection
-		meta(name="description", content="HERE Early user NFTs launch and a competition with 1000 NFTs as a reward")
+		meta(name="description", content="HERE Early user NFTs collection")
 		link(href="style.sass", rel="stylesheet")
 		link(href="http://herewallet.app/nft", rel="canonical")
 		meta(property="og:url", content="http://herewallet.app/nft")
 		meta(property="og:title", content="HERE NFT Collection")
-		meta(property="og:description", content="HERE Early user NFTs launch and a competition with 1000 NFTs as a reward")
+		meta(property="og:description", content="HERE Early user NFTs collection")
 		meta(name="format-detection", content="telephone=no")
 		link(href="https://fonts.googleapis.com", rel="preconnect")
 		link(rel="preconnect", href="https://fonts.gstatic.com", crossorigin)
