--- a/mint/index.pug
+++ b/mint/index.pug
@@ -54,7 +54,7 @@ html(lang="en")
                 h3.item-value.green 10 000
               .mint-status-item.time
                 p.item-title Time to mint
-                h3.item-value.time-to-mint 0d 00:00:00
+                h3.item-value.time-to-mint(style="width: 350px; height: 50px")
               .mint-status-item
                 p.item-title Total minted
                 h3.item-value.total-minted 0
@@ -82,7 +82,13 @@ html(lang="en")
                     .connect-link-text
                       p.link-text Connect to mint
                       p.link-hover-text Connect to mint
-                  
+
+                  a.claim-link(style="display: none")
+                    img(src="../assets/mint/claim.svg")
+                    .claim-link-text
+                      p.link-text Claim
+                      p.link-hover-text Claim
+            
                   .mint-required.required-time(style="display: none")
                     p.mint-required-title Free mint will be available at
                     p.mint-required-info.required-time-info
@@ -94,6 +100,11 @@ html(lang="en")
                     .connect-link-text
                       p.link-text Connect to mint
                       p.link-hover-text Connect to mint
+                  a.claim-link(style="display: none")
+                    img(src="../assets/mint/claim.svg")
+                    .claim-link-text
+                      p.link-text Claim
+                      p.link-hover-text Claim
                   .mint-required.required-activity(style="display: none")
                     p.mint-required-title Requirements to claim
                     p.mint-required-info 150+ score
@@ -112,6 +123,11 @@ html(lang="en")
                     .connect-link-text
                       p.link-text Connect to mint
                       p.link-hover-text Connect to mint
+                  a.claim-link(style="display: none")
+                    img(src="../assets/mint/claim.svg")
+                    .claim-link-text
+                      p.link-text Claim
+                      p.link-hover-text Claim
                   .mint-required.required-activity(style="display: none")
                     p.mint-required-title Requirements to claim
                     p.mint-required-info Binance connect
