--- a/mint/index.sass
+++ b/mint/index.sass
@@ -27,6 +27,7 @@
   border-radius: 16px !important
   font-family: Inter !important
   border: 1px solid #2C3034 !important
+  max-width: fit-content !important
 
 .page
   z-index: 1000
@@ -282,17 +283,19 @@
     flex-direction: row
     justify-content: center
     flex-wrap: wrap
+    gap: 48px
     @media (max-width: 700px)
       flex-direction: column
       align-items: center
 
-.connect-link
+.connect-link, .claim-link
   margin-bottom: 80px
   cursor: pointer
   display: flex
   height: 44px
   max-width: 230px
-  padding: 16px 32px
+  padding: 16px 
+  padding-right: 24px
   justify-content: center
   align-items: center
   gap: 12px
@@ -300,6 +303,7 @@
   border: 1px solid #F3E6E9
   background: #25282B
   z-index: 10
+
   &:hover
     .link-text
       transform: translate(0, -55px)
@@ -330,6 +334,7 @@
     @media (max-width: 480px)
       width: 32px
       height: 32px
+      
 .connect-item
   position: relative
   height: 324px
@@ -337,6 +342,20 @@
   display: flex
   justify-content: center
   align-items: center
+  &.can-claim
+    img
+      opacity: 1
+    &::before
+      content: ""
+      border-radius: 415px
+      opacity: 0.4
+      background: #FFBF00
+      filter: blur(100px)
+      position: absolute
+      width: 100%
+      height: 100%
+
+
   @media (max-width: 480px)
     width: 280px
     > img
