--- a/mint/index.pug
+++ b/mint/index.pug
@@ -51,13 +51,13 @@ html(lang="en")
             .mint-status
               .mint-status-item.prizes
                 p.item-title Total available
-                h3.item-value.green 10 000
+                h3.item-value.green.total-available
               .mint-status-item.time
                 p.item-title Time to mint
                 h3.item-value.time-to-mint(style="width: 350px; height: 50px")
               .mint-status-item
                 p.item-title Total minted
-                h3.item-value.total-minted 0
+                h3.item-value.total-minted
             .mint-buttons
               button.mint-button-connect Connect wallet
               a.mint-button-more(href="https://www.herewallet.app/blog/freemint") Learn more
@@ -65,10 +65,10 @@ html(lang="en")
               .prizes-and-total
                 .mint-status-item.prizes
                   p.item-title Total available
-                  h3.item-value.green 10 000
+                  h3.item-value.green.total-available
                 .mint-status-item.total
                   p.item-title Total minted
-                  h3.item-value.total-minted 0
+                  h3.item-value.total-minted
               .mint-status-item.time
                 p.item-title Time to mint
                 h3.item-value.time-to-mint 
