--- a/mint/index.sass
+++ b/mint/index.sass
@@ -342,7 +342,7 @@
   display: flex
   justify-content: center
   align-items: center
-  &.can-claim
+  &.can-claim, &.claimed
     img
       opacity: 1
     &::before
@@ -438,7 +438,7 @@
   flex-direction: column
   align-items: center
   justify-content: center
-  gap: 4px
+  gap: 8px
   width: 264px
   height: 130px
   margin-bottom: 100px
