--- a/mint/index.pug
+++ b/mint/index.pug
@@ -51,10 +51,10 @@ html(lang="en")
             .mint-status
               .mint-status-item.prizes
                 p.item-title Total available
-                h3.item-value.green.total-available
+                h3.item-value.green.total-available(style="width: 200px; height: 55px")
               .mint-status-item.time
                 p.item-title Time to mint
-                h3.item-value.time-to-mint(style="width: 350px; height: 50px")
+                h3.item-value.time-to-mint(style="width: 350px; height: 55px")
               .mint-status-item
                 p.item-title Total minted
                 h3.item-value.total-minted
@@ -197,12 +197,12 @@ html(lang="en")
           section.mint-timeline
             h1 Timeline
             .timeline-items
-              .timeline-item.active
+              .timeline-item
                 .timeline-item-image.background-connect-qrcode
                 .timeline-item-dates Aug, 25 - Aug, 26
                 .timeline-item-title Waiting list
                 .timeline-item-text Scan QR to set reminder
-              .timeline-item
+              .timeline-item.active
                 .timeline-item-image
                   img(src="../assets/mint/timeline-chest.png", width=140, height=140)
                 .timeline-item-dates Aug, 26 - Aug, 27
