--- a/mint/index.pug
+++ b/mint/index.pug
@@ -82,7 +82,7 @@ html(lang="en")
                     .connect-link-text
                       p.link-text Connect to mint
                       p.link-hover-text Connect to mint
-
+                  .mint-required.required-activity(style="display: none")
                   a.claim-link(style="display: none")
                     img(src="../assets/mint/claim.svg")
                     .claim-link-text
