realtime update freemint

--- a/mint/index.pug
+++ b/mint/index.pug
@@ -51,13 +51,13 @@ html(lang="en")
             .mint-status
               .mint-status-item.prizes
                 p.item-title Total available
-                h3.item-value.green.total-available(style="width: 200px; height: 55px")
+                h3.item-value.green.total-available 1000
               .mint-status-item.time
                 p.item-title Time to mint
-                h3.item-value.time-to-mint(style="width: 350px; height: 55px")
+                h3.item-value.time-to-mint(style="width:350px") 00:00:00
               .mint-status-item
                 p.item-title Total minted
-                h3.item-value.total-minted
+                h3.item-value.total-minted 0
             .mint-buttons
               button.mint-button-connect Connect wallet
               a.mint-button-more(href="https://www.herewallet.app/blog/freemint") Learn more
