--- a/mint/index.pug
+++ b/mint/index.pug
@@ -38,8 +38,13 @@ html(lang="en")
       include ./header/index.pug
       +header("/mint")
 
+      .support-buttons
+        a(href="https://discord.gg/8Q3gw3gsD2")
+          img(src="../assets/Socials/Discord.svg")
+        a(href="https://t.me/herewallet")
+          img(src="../assets/Socials/Telegram.svg")
+      
       .page 
-
         .mint-interlude-wrap
           .mint-line
             h1.mint-title
