--- a/mint/index.sass
+++ b/mint/index.sass
@@ -20,6 +20,22 @@
   100%
     opacity: 1
 
+.support-buttons
+  position: fixed
+  display: flex
+  flex-direction: column
+  z-index: 100000
+  gap: 24px
+  bottom: 24px
+  left: 24px
+  img
+    width: 56px
+    height: 56px
+    opacity: 0.8
+    transition: 0.2s opacity
+  img:hover
+    opacity: 1
+
 .here-toast
   background: #fdbf1c !important
   box-shadow: none !important
