--- a/mint/index.pug
+++ b/mint/index.pug
@@ -41,7 +41,7 @@ html(lang="en")
       .support-buttons
         a(href="https://discord.gg/8Q3gw3gsD2")
           img(src="../assets/Socials/Discord.svg")
-        a(href="https://t.me/herewallet")
+        a(href="https://t.me/herewalletchat")
           img(src="../assets/Socials/Telegram.svg")
       
       .page 
