--- a/mint/index.sass
+++ b/mint/index.sass
@@ -35,6 +35,14 @@
     transition: 0.2s opacity
   img:hover
     opacity: 1
+  
+  @media (max-width: 700px)
+    gap: 16px
+    left: 16px
+    bottom: 16px
+    img 
+      width: 42px
+      height: 42px
 
 .here-toast
   background: #fdbf1c !important
