--- a/landing/section-binance/index.pug
+++ b/landing/section-binance/index.pug
@@ -1,6 +1,6 @@
 section.binance-features__wrapper
 	.background
-	h2 Your Binance accont
+	h2 Your Binance account
 	.binance-here
 		img(src="../assets/icons/icon-binance-black.svg", alt="Binance").binance-here__binance
 		img(src="../assets/icons/icon-x.svg", alt="Binance").binance-here__x
