--- a/landing/section-partners/index.pug
+++ b/landing/section-partners/index.pug
@@ -2,38 +2,30 @@ section.partners
     h2
         | Partners
         span.dot .
-    .partners-group.partners-nft
-        p NFT
-        a(href="https://paras.id")
-            img(src='/assets/partners/paras.svg', width="140px", height="33px")
-
-        a(href="https://nearstarter.fi/")
-            img(src='/assets/partners/nearstarter.svg', style="margin-top: 8px", width="303px", height="29px")
-     
-        a(href="https://www.mintbase.io/")
-            img(src='/assets/partners/mintbase.svg', width="187px", height="49px")
-        
-
-    .partners-group.partners-finance
-        p Finance
-        a(href="https://pembrock.finance/")
-            img(src='/assets/partners/pembrock.svg', width="242px", height="65px")
-        a(href="https://app.burrow.cash/")
-            img(src='/assets/partners/burrow.svg', style="margin-bottom: 5px", width="176px", height="47px")
-        a(href="https://www.nearpay.io/")
-            img(src='/assets/partners/nearpay.svg', width="161px", height="30px")
-        a(href="https://astrostakers.com/")
-            img(src='/assets/partners/astrostakers.svg', style="margin-bottom: 6px", width="238px", height="27px")
-
-    .partners-wrap
-        .partners-group.partners-dex
-            p DEX
-            a(href="https://tonic.foundation/")
-                img(src='/assets/partners/tonic.svg', width="181px", height="57px")
-            a(href="https://spin.fi/")
-                img(src='/assets/partners/spin.svg', width="187px", height="52px")
-        
-        .partners-group.partners-other
-            p Other
-            a(href="https://learnnear.club/")
-                img(src='/assets/partners/LNC.svg', width="360px", height="72px")
+    .partners-group
+        a(href="https://tradeport.xyz/").partners_1
+            img(src='/assets/partners/trade-port.svg', width="185px", height="40px")
+        a(href="https://paras.id").partners_2
+            img(src='/assets/partners/paras.svg', width="112px", height="26px")
+        a(href="https://orderly.network/").partners_3
+            img(src='/assets/partners/orderly-network.svg', width="244px", height="30px")
+        a(href="https://www.mintbase.io/").partners_4
+            img(src='/assets/partners/mintbase.svg', width="148px", height="38px")
+        a(href="https://spin.fi/").partners_5
+            img(src='/assets/partners/spin.svg', width="116px", height="32px")
+        a(href="https://pembrock.finance/").partners_6
+            img(src='/assets/partners/pemb-rock.svg', width="158px", height="42px")
+        a(href="https://app.burrow.cash/").partners_7
+            img(src='/assets/partners/burrow.svg', width="145px", height="39px")
+        a(href="https://mercuryo.io/").partners_8
+            img(src='/assets/partners/mercuryo.svg', width="179px", height="31px")
+        a(href="https://astrostakers.com/").partners_9
+            img(src='/assets/partners/astrostakers.svg', width="204px", height="23px")
+        a(href="https://www.ref.finance/").partners_10
+            img(src='/assets/partners/ref-finance.svg', width="208px", height="38px")
+        a(href="https://learnnear.club/").partners_11
+            img(src='/assets/partners/learn-near-club.svg', width="254px", height="25px")
+        a(href="https://near.social/").partners_12
+            img(src='/assets/partners/near-social.svg', width="180px", height="21px")
+        a(href="https://loozr.io/").partners_13
+            img(src='/assets/partners/loozr.svg', width="125px", height="29px")
