--- a/landing/section-features/index.sass
+++ b/landing/section-features/index.sass
@@ -19,6 +19,8 @@
     width: 100%
     margin: 0 0 164px 0
     gap: 16px
+    @media (max-width: 1160px)
+        margin: 0 0 80px 0
     @media (max-width: 620px)
         margin: 0 0 64px 0
 
