Pager FreeMint and fixed Aurora

--- a/aurora/index.pug
+++ b/aurora/index.pug
@@ -65,8 +65,8 @@ html(lang="en")
 					p First transaction:
 					button + 50
 			.cart-finance.cart-item
-				.cart-title Bounce Finance
-				.cart-description Decentralized auction protocol that empowers users to create and participate in customizable on-chain auctions across multiple blockchain ecosystems
+				.cart-title Pipeflare
+				.cart-description Explore Casual Play-To-Earn Games With Weekly Competitions and Leaderboards
 				.cart-transaction
 					p First transaction:
 					button + 50
