--- a/aurora/style.sass
+++ b/aurora/style.sass
@@ -358,7 +358,7 @@ body
 	.cart-trisolaris:after
 		background-image: url(./images/cart-3.svg)
 	.cart-finance:after
-		background-image: url(./images/cart-4.svg)
+		background-image: url(./images/pipeflare.png)
 
 .connect-wallet
 	display: flex
