--- a/pager-freemint/style.sass
+++ b/pager-freemint/style.sass
@@ -1,4 +1,5 @@
 @import "../landing/common/base.sass"
+
 @font-face
 	font-family: 'ClashDisplay-Variable'
 	src: url('./assets/ClashDisplay/ClashDisplay-Variable.woff2') format('woff2'), url('./assets/ClashDisplay/ClashDisplay-Variable.woff') format('woff'), url('./assets/ClashDisplay/ClashDisplay-Variable.ttf') format('truetype')
@@ -91,6 +92,30 @@ body
 	@media (max-width: 750px)
 		background-size: auto
 
+.support-buttons
+	position: fixed
+	display: flex
+	flex-direction: column
+	z-index: 100000
+	gap: 24px
+	bottom: 24px
+	right: 24px
+	img
+		width: 56px
+		height: 56px
+		opacity: 0.8
+		transition: 0.2s opacity
+	img:hover
+		opacity: 1
+	
+	@media (max-width: 700px)
+		gap: 16px
+		left: 16px
+		bottom: 16px
+		img 
+			width: 42px
+			height: 42px
+
 .header
 	display: flex
 	align-items: center
@@ -151,6 +176,7 @@ body
 	min-height: 500px
 	margin: 0 auto
 	padding: 0 40px
+
 	@media (max-width: 1140px)
 		min-height: auto
 		margin: 0 auto 24px auto
@@ -164,6 +190,7 @@ body
 		left: 24px
 		top: 0
 		max-width: 380px
+		z-index: 100
 		@media (max-width: 1140px)
 			left: 40px
 		@media (max-width: 750px)
@@ -205,6 +232,8 @@ body
 		width: 100%
 		max-width: 880px
 		margin: 0 0 0 auto
+		user-select: none
+
 		@media (max-width: 1140px)
 			width: 620px
 			margin-right: 52px
@@ -318,7 +347,6 @@ body
 		width: 1184px
 		max-width: 100%
 		margin: 0 auto
-		overflow: hidden
 		// Slide Border
 		&::after
 			content: ""
@@ -462,6 +490,7 @@ body
 				opacity: 0
 				&.active
 					opacity: 1
+					
 				@media (max-width: 1140px)
 					top: 185px
 					right: 180px
@@ -473,12 +502,14 @@ body
 				@media (max-width: 750px)
 					flex-shrink: 0
 					order: 1
-					position: relative
 					right: auto
 					top: auto
 					width: 100%
 					min-height: auto
 					margin: 0 0 24px 0
+					&.active
+						position: relative
+
 				.slider-item_img
 					width: 193px
 					position: absolute
@@ -518,20 +549,20 @@ body
 	@media (max-width: 750px)
 		order: 1
 
-
-
 .slider-item__pagination
 	display: flex
 	align-items: center
 	gap: 16px
 	position: relative
 	z-index: 100
+
 	@media (max-width: 750px)
 		justify-content: space-between
 		position: absolute
-		top: 132px
+		top: 200px
 		z-index: 3
 		width: 100%
+		
 	.slider-pagination__item
 		width: 48px
 		height: 48px
@@ -629,7 +660,6 @@ body
 			display: block
 			font-weight: 500
 	&__ul
-		flex-grow: 1
 		margin: 0 0 40px 0
 		@media (max-width: 750px)
 			text-align: left
@@ -677,6 +707,12 @@ body
 		font-size: 16px
 		font-weight: 600
 		line-height: 1.25
+		cursor: pointer
+
+		&:disabled
+			opacity: 0.5
+			cursor: default
+
 		@media (max-width: 1000px)
 			width: 100%
 			max-width: 216px
@@ -705,13 +741,12 @@ body
 				font-size: 14px
 
 	&__right
-		position: absolute
 		right: 0
-		top: 50%
-		transform: translateY(-50%)
+		position: absolute
+		max-width: 500px
 		width: 50%
-		@media (max-width: 1140px)
-			width: 400px
+		height: 100%
+		
 		@media (max-width: 750px)
 			position: relative
 			right: auto
@@ -719,6 +754,7 @@ body
 			transform: unset
 			width: 100%
 			margin: 0 0 24px 0
+		
 		p
 			position: absolute
 			top: 50%
