--- a/pager-freemint/style.sass
+++ b/pager-freemint/style.sass
@@ -7,6 +7,13 @@
 		font-display: swap
 		font-style: normal
 
+
+@font-face
+	font-family: 'ComicSans'
+	src: url('./assets/Comic Sans MS.ttf') format('truetype')
+	font-display: swap
+	font-weight: 500
+
 *,
 *:before,
 *:after
@@ -835,9 +842,9 @@ body
 			color: #0C0B09
 			text-align: center
 			font-feature-settings: 'liga' off
-			font-family: Comic Sans MS
+			font-family: "Comic Sans MS", ComicSans
 			font-size: 16px
-			font-weight: 700
+			font-weight: 900
 			letter-spacing: -0.24px
 			text-transform: uppercase
 			@media (max-width: 1000px)
@@ -934,10 +941,10 @@ body
 				color: #F2E4CD
 				text-align: center
 				font-feature-settings: 'liga' off
-				font-family: Comic Sans MS
+				font-family: "Comic Sans MS", ComicSans
 				font-size: 12.368px
 				font-style: normal
-				font-weight: 700
+				font-weight: 900
 				line-height: normal
 				letter-spacing: -0.186px
 				text-transform: uppercase
